2008-05-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http.erl (parse_auth): Allow password that
	include colon character (EJAB-522)

2008-04-30  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_caps.erl: XEP-0115 patch (EJAB-618)

2008-04-29  Badlop  <badlop@process-one.net>

	* src/ejabberd_s2s_out.erl: Improve confusing log message in s2s
	connection: wait_for_validation connect timeout (EJAB-617)

	* src/ejabberd.cfg.example: Small improvements in explanations

	* doc/guide.tex: Document MUC room options (EJAB-619)

2008-04-28  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document the option max_s2s_connections

2008-04-27  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Fixed room shaper processing

2008-04-26  Badlop  <badlop@process-one.net>

	* src/mod_shared_roster.erl: Fix for new registered accounts not
	being immediately shown in an 'all' special shared roster
	group (thanks to Alexey Shchepin) (EJAB-71)
	* src/mod_register.erl: New vhost event user_registered

	* doc/guide.tex: Document option registration_timeout (EJAB-614)

2008-04-23  Alexey Shchepin  <alexey@process-one.net>

	* src/treap.erl: Bugfix

	* src/mod_register.erl: Fixed table creation, timeout isn't
	activated when registration fails

	* src/mod_register.erl: Restrict registration frequency per IP or
	user (EJAB-614)
	* src/ejabberd_c2s.erl: Pass IP to the c2s_unauthenticated_iq hook
	* src/ejabberd_config.erl: Added registration_timeout option

	* src/treap.erl: Treaps implementation

2008-04-22  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth.erl: Improve anonymous authentication to not
	remove rosters accidentally (EJAB-549). New functions in
	ejabberd_auth to get/check password and know which module accepted
	the authentication. New element 'auth_module' in ejabberd_c2s
	record 'statedata'. Cyrsasl provides a new property in the
	response: {auth_module, AuthModule}.
	* src/ejabberd_auth_anonymous.erl: Likewise